--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="text-center">
           <div class="text-center">
             <h1 class="text-4xl font-semibold leading-[50px] tracking-wide text-transparent bg-clip-text bg-gradient-to-l from-pink-400 to-blue-600 mb-10">
-              45 CSS Only Modern Button Styles
+              CSS Only Modern Button Styles
             </h1>
           </div>
         </div>
